center on mobile bug fix #3

--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ section {
         height: auto;
     }
     section {
-        width: 100%; 
+        width: 100vh; 
         min-height: 100vh;
     }
 }
